Time: 8 ms (49.92%) | Memory: 57.1 MB (31.13%) - LeetSync